[gd_scene load_steps=33 format=3 uid="uid://l33psrubdfjr"]

[ext_resource type="Script" uid="uid://deolupy8la60j" path="res://character/character.gd" id="1_xc7lg"]
[ext_resource type="Texture2D" uid="uid://sj12f64egdus" path="res://assets/characters/Player.png" id="2_8iif2"]
[ext_resource type="Script" uid="uid://dtchlkspfljan" path="res://character/player_camera.gd" id="3_pope0"]
[ext_resource type="Script" uid="uid://bsxxr2ngrfif5" path="res://character/state/state_machine.gd" id="4_blsty"]
[ext_resource type="Script" uid="uid://ppcbxy7ojsg0" path="res://character/state/idle_state.gd" id="5_xfrs5"]
[ext_resource type="Script" uid="uid://b3ijjy525pvbg" path="res://character/state/move_state.gd" id="6_ixtp0"]
[ext_resource type="Script" uid="uid://d0r4g8hbafppe" path="res://character/state/attack_state.gd" id="7_3ymy1"]
[ext_resource type="PackedScene" uid="uid://7mmqtkod6yvx" path="res://components/hurtbox/hurtbox.tscn" id="8_nee7j"]
[ext_resource type="PackedScene" uid="uid://c33sid50py53w" path="res://components/hitbox/hitbox.tscn" id="9_c4oxl"]
[ext_resource type="AudioStream" uid="uid://ktysxhrwqron" path="res://assets/sfx/Battle/22_Slash_04.wav" id="10_qs8x1"]
[ext_resource type="PackedScene" uid="uid://c1p5e8psuhivy" path="res://inventory/inventory.tscn" id="11_8r4w4"]
[ext_resource type="PackedScene" uid="uid://ds0cb2m2gmg7s" path="res://inventory/inventory_bar.tscn" id="12_a7qf6"]
[ext_resource type="PackedScene" uid="uid://baej55qrq5wdb" path="res://inventory/inventory_backpack.tscn" id="13_backpack"]

[sub_resource type="Animation" id="Animation_v0x5x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/SwordCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/SwordCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/SwordCollision:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, 17)]
}

[sub_resource type="Animation" id="Animation_d5sjg"]
resource_name = "attack_down"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/SwordCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/SwordCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/SwordCollision:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 17), Vector2(30, 17)]
}

[sub_resource type="Animation" id="Animation_eng0c"]
resource_name = "attack_left"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/SwordCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/SwordCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-6.5, -8), Vector2(-7.5, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/SwordCollision:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(21, 20), Vector2(23, 28)]
}

[sub_resource type="Animation" id="Animation_vj3cl"]
resource_name = "attack_right"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/SwordCollision:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 17), Vector2(24, 27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/SwordCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/SwordCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, -8), Vector2(7, -5.5)]
}

[sub_resource type="Animation" id="Animation_l3q6l"]
resource_name = "attack_up"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/SwordCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/SwordCollision:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(23, 23), Vector2(32, 23)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/SwordCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16.5), Vector2(0, -18.5)]
}

[sub_resource type="Animation" id="Animation_43mmh"]
resource_name = "idle_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_yi2de"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_xuv34"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_7oj15"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_y5d0y"]
resource_name = "move_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_7evsa"]
resource_name = "move_LEFT"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_m38ds"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_yqt07"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tn2ua"]
_data = {
&"RESET": SubResource("Animation_v0x5x"),
&"attack_down": SubResource("Animation_d5sjg"),
&"attack_left": SubResource("Animation_eng0c"),
&"attack_right": SubResource("Animation_vj3cl"),
&"attack_up": SubResource("Animation_l3q6l"),
&"idle_down": SubResource("Animation_43mmh"),
&"idle_left": SubResource("Animation_yi2de"),
&"idle_right": SubResource("Animation_xuv34"),
&"idle_up": SubResource("Animation_7oj15"),
&"move_down": SubResource("Animation_y5d0y"),
&"move_left": SubResource("Animation_7evsa"),
&"move_right": SubResource("Animation_m38ds"),
&"move_up": SubResource("Animation_yqt07")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kder7"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8r2v"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cdlu"]
size = Vector2(30, 17)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gi50l"]
bg_color = Color(1, 0.0588235, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_op2fp"]
bg_color = Color(0, 0.721569, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Character" type="CharacterBody2D"]
z_index = 5
collision_layer = 16
collision_mask = 5
script = ExtResource("1_xc7lg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_8iif2")
hframes = 6
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tn2ua")
}
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_kder7")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_pope0")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_blsty")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_xfrs5")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("6_ixtp0")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("7_3ymy1")

[node name="Hurtbox" parent="." instance=ExtResource("8_nee7j")]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_u8r2v")
debug_color = Color(0.992157, 0, 0, 0)

[node name="Hitbox" parent="." instance=ExtResource("9_c4oxl")]
collision_layer = 0
collision_mask = 256
monitorable = false

[node name="SwordCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_2cdlu")
disabled = true

[node name="SwordAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qs8x1")

[node name="HealthBar" type="CanvasLayer" parent="."]
visible = false

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
offset_left = 5.0
offset_top = 4.0
offset_right = 41.0
offset_bottom = 8.0
theme_override_styles/background = SubResource("StyleBoxFlat_gi50l")
theme_override_styles/fill = SubResource("StyleBoxFlat_op2fp")
value = 70.0
show_percentage = false

[node name="Inventory" parent="." instance=ExtResource("11_8r4w4")]

[node name="InventoryBar" parent="Inventory" instance=ExtResource("12_a7qf6")]

[node name="InventoryBackpack" parent="Inventory" instance=ExtResource("13_backpack")]
layer = 10
